Scrollbar fixed

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -37,7 +37,7 @@
   }
   
   ::-webkit-scrollbar-track {
-    background-color: #f2f8fd;
+    background-color: #c2ddf5;
   }
 #bg{
     background-color:#c2ddf5 ;
